# eco-mcp-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  config.yml  pyproject.toml  requirements.txt  tasks.py
.claude/: launch.json  settings.json
.gauntlet/trials/: mcp_streamable_endpoint_robustness.yaml  preview_query_arg_shape_safety.yaml  preview_tool_dispatch_robustness.yaml  ssrf_outbound_fetch_isolation.yaml  upstream_resource_exhaustion_bounds.yaml
.github/workflows/: build-and-publish.yml  trufflehog.yml
data/: ecoregions.json
deploy/: main.yml
investigation/: 1776723700_00_bootstrap.md  1776723900_01_github_issues_digest.md  1776724300_02_client_identity_plot_twist.md  1776724600_03_prior_session_summary.md  1776724900_04_master_findings.md  1776725400_05_pivot_to_action.md  1776725700_06_path_d_worked.md  1776726600_07_actual_fix.md  1776735420_08_eco_mcp_app_debug_chain.md  README.md  gh_issue_audience_filter.md  issue_61_reply_draft.md
scripts/: build_ecopedia_cache.py  build_species_cards.py  install-desktop-config.py
src/eco_mcp_app/: __init__.py  __main__.py  _preload.py  crafting.py  ecoregion.py  fair_price.py  http_app.py  livereload.py  map.py  server.py  species.py  telemetry.py  wikidata.py
src/eco_mcp_app/templates/: eco.css  eco.html
src/eco_mcp_app/templates/partials/: about.html  banner.html  card.html  cards.html  chips.html  crafting.html  credits.html  economy_card.html  ecopedia_card.html  ecoregion_card.html  empty.html  error.html  fair_price.html  footer.html  government.html  hero.html  map.html  milestones.html  site_header.html  species.html  try_others.html
src/eco_mcp_app/ui/: eco.html
static/: harness.html
tests/: test_crafting.py  test_economy.py  test_ecoregion.py  test_fair_price.py  test_fetch_eco_info.py  test_format_eco_markup.py  test_government.py  test_map.py  test_milestones.py  test_normalize_server_url.py  test_smoke.py  test_species.py  test_tools.py  test_wikidata.py
todo/: 01-grafana-prometheus-exporter.md  02-economic-dashboard.md  03-map-property-overlay.md  04-milestone-tracker.md  05-species-profile.md  06-wikidata-ecopedia.md  07-crafting-atlas.md  08-fair-price-advisor.md  09-government-orgchart.md  10-ecoregion-biodiversity.md  README.md
