[project]
name = "eco-mcp-app"
version = "0.1.0"
description = "A Claude Desktop MCP App for the 'Eco via Sirens' game server."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Kai Siren" }]
dependencies = [
  "mcp>=1.14.0",
  "httpx>=0.28.0",
  "invoke>=3.0.3",
]

[project.scripts]
eco-mcp-app = "eco_mcp_app.__main__:main"

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eco_mcp_app"]

[tool.hatch.build.targets.wheel.force-include]
"src/eco_mcp_app/ui/eco.html" = "eco_mcp_app/ui/eco.html"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "RUF"]

[tool.mypy]
strict = true
python_version = "3.13"
