[project]
name = "eco-mcp-app"
version = "0.1.0"
description = "A Claude Desktop MCP App for the 'Eco via Sirens' game server."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Kai Siren" }]
dependencies = [
  "mcp>=1.14.0",
  "httpx>=0.28.0",
  "invoke>=3.0.3",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.0",
  # Already pulled in transitively by uvicorn[standard]; listed explicitly
  # because livereload.py imports it directly.
  "watchfiles>=1.0",
]

[project.scripts]
eco-mcp-app = "eco_mcp_app.__main__:main"

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eco_mcp_app"]

[tool.hatch.build.targets.wheel.force-include]
"src/eco_mcp_app/templates" = "eco_mcp_app/templates"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tasks.py" = ["E501"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "eco_mcp_app.server"
# mcp SDK's low-level Server exposes untyped decorators and accepts `_meta`
# via kwarg-spread, which strict mode can't model. Revisit after migrating
# to FastMCP / FastAPI transport.
disallow_untyped_decorators = false
disable_error_code = ["arg-type", "no-any-return", "no-untyped-call"]

[dependency-groups]
dev = [
  "mypy>=1.20.0",
  "pre-commit>=4.5.1",
  "ruff>=0.15.10",
]
